Updates layout to stop overflow cutting off in rows.

--- a/_assets/css/includes/_layout.scss
+++ b/_assets/css/includes/_layout.scss
@@ -33,8 +33,8 @@ body {
 
 .row {
   width: 100%;
-  overflow: hidden;
   clear: both;
+  @extend %clearfix;
 }
 
 .cell {
